--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,16 @@
         app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
     <Button
+        android:id="@+id/testMoveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test Move One File"
+        app:layout_constraintTop_toBottomOf="@id/dryRunSwitch"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
+
+    <Button
         android:id="@+id/cleanButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -37,18 +47,7 @@
         android:text="開始掃描"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dryRunSwitch" />
-
-
-    <Button
-        android:id="@+id/testMoveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Test Move One File"
-        app:layout_constraintTop_toBottomOf="@id/cleanButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/testMoveButton" />
 
     <ScrollView
         android:layout_width="0dp"
@@ -57,8 +56,10 @@
         android:background="#F5F5F5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cleanButton">
+        app:layout_constraintTop_toBottomOf="@id/cleanButton"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/resultTextView"
